--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 h1 {
   text-align: center;
   font-size: 24px;
-  color: red;
+  color: rgb(36, 33, 33);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 footer {
