--- a/css/styles.css
+++ b/css/styles.css
@@ -22,18 +22,15 @@ footer {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   border-radius: 5px;
 }
-.container-cities {
-  max-width: 600px;
-  background-color: blue;
-  box-shadow: rgba(105, 42, 42, 0.15) 0px 5px 15px 0px;
-}
 
 select {
   width: 100%;
   margin: 0 auto;
   padding: 10px;
+  border: 2px solid rgb(39, 84, 138);
   border-radius: 4px;
   font-size: 15px;
+  transition: 1ms;
 }
 .city {
   display: flex;
@@ -60,4 +57,7 @@ select {
 .date {
   opacity: 0.5;
   font-size: 15px;
+}
+a:link {
+  color: rgb(39, 84, 138);
 }
